--- a/package.json
+++ b/package.json
@@ -16,8 +16,14 @@
     "build": "webpack --env.production --mode production",
     "test": "echo \"Error: no test specified\" && exit 1",
     "clean": "./node_modules/.bin/rimraf dist/",
-    "rm-dep": "rm -rf node_modules && rm -rf package-lock.json"
+    "rm-dep": "rm -rf node_modules && rm -rf package-lock.json",
+    "flow:status": "flow status --quiet",
+    "lint:all": "./node_modules/.bin/eslint . --ext .js --ext .jsx",
+    "lint-precommit": "lint-staged"
   },
+  "pre-commit": [
+    "lint-precommit"
+  ],
   "keywords": [],
   "author": "Sarkany Adrian <sarkany1@outlook.com>",
   "bugs": {
@@ -27,18 +33,22 @@
   "devDependencies": {
     "@babel/core": "7.1.6",
     "@babel/preset-env": "7.1.6",
+    "@babel/preset-flow": "7.0.0",
     "@babel/preset-react": "7.0.0",
     "@babel/runtime": "7.1.5",
+    "babel-eslint": "10.0.1",
     "babel-loader": "8.0.4",
     "babel-plugin-transform-react-remove-prop-types": "0.4.20",
     "clean-webpack-plugin": "1.0.0",
     "eslint": "5.9.0",
     "eslint-config-airbnb": "17.1.0",
     "eslint-config-prettier": "3.3.0",
+    "eslint-plugin-flowtype": "3.2.0",
     "eslint-plugin-import": "2.14.0",
     "eslint-plugin-jsx-a11y": "6.1.2",
     "eslint-plugin-prettier": "3.0.0",
     "eslint-plugin-react": "7.11.1",
+    "flow-bin": "0.87.0",
     "html-webpack-plugin": "3.2.0",
     "mini-css-extract-plugin": "0.4.5",
     "prettier": "1.15.3",
