--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
     "url": ""
   },
   "scripts": {
-    "start": "webpack-dev-server --mode development",
-    "build": "webpack --env.production --mode production",
+    "start": "./node_modules/.bin/webpack-dev-server --mode development",
+    "build": "./node_modules/.bin/webpack --env.production --mode production",
     "test": "echo \"Error: no test specified\" && exit 1",
     "clean": "./node_modules/.bin/rimraf dist/",
     "rm-dep": "rm -rf node_modules && rm -rf package-lock.json",
@@ -67,12 +67,14 @@
     "@babel/plugin-proposal-export-default-from": "7.0.0",
     "@babel/plugin-proposal-throw-expressions": "7.0.0",
     "@babel/plugin-transform-runtime": "7.1.0",
+    "autoprefixer": "9.4.0",
     "css-hot-loader": "1.4.2",
     "css-loader": "1.0.1",
     "dotenv": "6.1.0",
     "dotenv-webpack": "1.5.7",
     "eslint-plugin-react-hooks": "0.0.0",
     "file-loader": "2.0.0",
+    "node-sass": "4.10.0",
     "postcss-loader": "3.0.0",
     "react": "16.7.0-alpha.2",
     "react-dom": "16.7.0-alpha.2",
