--- a/.flowconfig
+++ b/.flowconfig
@@ -10,11 +10,16 @@
 all=warn
 
 [options]
-;emoji=true
 module.system=haste
 module.name_mapper='^containers' ->'<PROJECT_ROOT>/src/containers'
 module.name_mapper='^components' ->'<PROJECT_ROOT>/src/components'
 module.name_mapper='^atoms' ->'<PROJECT_ROOT>/src/atoms'
 module.name_mapper='^constants' ->'<PROJECT_ROOT>/src/constants'
+module.system.node.resolve_dirname=node_modules
+
+module.file_ext=.css
+module.name_mapper.extension='css' -> 'empty/object'
+module.file_ext=.scss
+module.name_mapper.extension='scss' -> 'empty/object'
 
 [strict]
