--- a/.flowconfig
+++ b/.flowconfig
@@ -7,19 +7,23 @@
 [libs]
 
 [lints]
-all=warn
 
 [options]
-module.system=haste
+module.system.node.resolve_dirname=node_modules
+
+module.system.node.resolve_dirname=./src
+
+;module.system=haste
+
 module.name_mapper='^containers' ->'<PROJECT_ROOT>/src/containers'
 module.name_mapper='^components' ->'<PROJECT_ROOT>/src/components'
 module.name_mapper='^atoms' ->'<PROJECT_ROOT>/src/atoms'
 module.name_mapper='^constants' ->'<PROJECT_ROOT>/src/constants'
-module.system.node.resolve_dirname=node_modules
 
-module.file_ext=.css
-module.name_mapper.extension='css' -> 'empty/object'
-module.file_ext=.scss
-module.name_mapper.extension='scss' -> 'empty/object'
+;module.file_ext=.css
+;module.name_mapper.extension='css' -> 'empty/object'
+;
+;module.file_ext=.scss
+;module.name_mapper.extension='scss' -> 'empty/object'
 
 [strict]
