--- a/.flowconfig
+++ b/.flowconfig
@@ -1,6 +1,5 @@
 [ignore]
 <PROJECT_ROOT>/build
-<PROJECT_ROOT>/node_modules
 
 [include]
 
@@ -10,16 +9,16 @@
 all=warn
 
 [options]
-module.system=haste
+module.system=node
+module.system.node.resolve_dirname=node_modules
+
 module.name_mapper='^containers' ->'<PROJECT_ROOT>/src/containers'
 module.name_mapper='^components' ->'<PROJECT_ROOT>/src/components'
 module.name_mapper='^atoms' ->'<PROJECT_ROOT>/src/atoms'
 module.name_mapper='^constants' ->'<PROJECT_ROOT>/src/constants'
-module.system.node.resolve_dirname=node_modules
+module.name_mapper='^helpers' ->'<PROJECT_ROOT>/src/helpers'
 
-module.file_ext=.css
-module.name_mapper.extension='css' -> 'empty/object'
-module.file_ext=.scss
-module.name_mapper.extension='scss' -> 'empty/object'
+module.name_mapper.extension='css' -> '<PROJECT_ROOT>/StyleStub.js.flow'
+module.name_mapper.extension='scss' -> '<PROJECT_ROOT>/StyleStub.js.flow'
 
 [strict]
